finish most of the basic services and apis